--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,19 +4,31 @@
   box-sizing: border-box;
 }
 
+header, .grid, footer {
+  max-width: 840px;
+  margin: 0 auto;
+}
+
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 
 h1 {
     color: steelblue;
+    border-bottom: solid;
 }
 
 main img {
@@ -33,14 +45,22 @@ p {
     padding: 0;
 }
 
+.grid {
+  display: grid;
+  align-items: center;
+}
+
 main {
-  max-width: 840px;
+  grid-column: 2/3;
+  margin: 1rem;
 }
 
 aside {
   width: 20rem;
   text-align: center;
   position: relative;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 
 aside img {
@@ -65,7 +85,7 @@ footer {
 .box {
   margin: 1rem;
   border: 1px solid rgba(0,0,0,.1);
-  padding: 1rem;
+  padding: 1rem 2rem;
   background-color: #ddd;
   color: #000;
 }
